Configuración e interfaz de Retrofit con tenistas Rest